--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,29 @@ h1 {
   font-size: 64px;
   margin-top: 0;
   margin-bottom: 15px;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
 }
 
 p {
     font-size: 24px;
+    text-align: left;
+}
+
+h2, p {
+  color: black;
+  width: 75%;
+}
+
+.info {
+  width: 80%;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: 0;
+  padding: 20px;
+  max-width: 600px;
+  font-size: 16px;
 }
